--- a/examples/calc/index.html
+++ b/examples/calc/index.html
@@ -2,7 +2,8 @@
 <html charset="utf-8">
 <head>
 	<title>Calculator</title>
-	
+	<link rel="stylesheet" href="css/main.css">
+	<script src="js/main.js"></script>
 </head>
 <body>
 	<div id="calculator">
