--- a/examples/calc/index.html
+++ b/examples/calc/index.html
@@ -29,5 +29,6 @@
 			<span class="operator">x</span>
 		</div>
 	</div>
+	<script src="js/calc.js"></script>
 	<script src="js/main.js"></script>
 </body>
