--- a/examples/calc/caller.html
+++ b/examples/calc/caller.html
@@ -37,7 +37,7 @@
 		}
 
 		window.addEventListener('message', function(custom_event) { 
-				console.log('got!1');
+				console.log('got!1', custom_event.origin);
 			if (custom_event.origin === calc_url) {
 				console.log('got!2');
 				return;
