--- a/examples/calc/caller.html
+++ b/examples/calc/caller.html
@@ -18,35 +18,38 @@
 	</p>
 
 	<script>
-		var calc_url = "https://lucifer63.github.io/examples/calc/index.html";
 
-		document.getElementsByClassName('calc-open')[0].addEventListener('click', openCalcWindow);
+(function() {
+	const origin = 'https://lucifer63.github.io';
 
-		function openCalcWindow() {
-			var w = window.open(calc_url, "_blank", "height=500,width=450,resizable=yes");
-			w.document.title = "Calculator";
-		}
+	document.getElementsByClassName('calc-open')[0].addEventListener('click', openCalcWindow);
 
-		var listeners = {
-			calc: {
-				init: function(data) {
-					document.getElementsByClassName('calc-ui')[0].classList.remove('inactive');
-					document.getElementsByClassName('calc-eval').addEventListener('click', data.instance.evaluate);
-				}
+	function openCalcWindow() {
+		var w = window.open("index.html", "_blank", "height=500,width=450,resizable=yes");
+		w.document.title = "Calculator";
+	}
+
+	var listeners = {
+		calc: {
+			init: function(data) {
+				document.getElementsByClassName('calc-ui')[0].classList.remove('inactive');
+				document.getElementsByClassName('calc-eval').addEventListener('click', data.instance.evaluate);
 			}
 		}
+	}
 
-		window.addEventListener('message', function(custom_event) { 
-				console.log('got!1', custom_event.origin);
-			if (custom_event.origin === calc_url) {
-				console.log('got!2');
-				return;
-				try {
-					listeners[ custom_event.caller ][ custom_event.event ]( custom_event.data );
-				} catch (e) {}
-			} else { 
-				return;
-			} 
-		});
+	window.addEventListener('message', function(custom_event) { 
+			console.log('got!1', custom_event.origin);
+		if (custom_event.origin === origin) {
+			console.log('got!2');
+			return;
+			try {
+				listeners[ custom_event.caller ][ custom_event.event ]( custom_event.data );
+			} catch (e) {}
+		} else { 
+			return;
+		} 
+	});
+})
 	</script>
 </body>
