--- a/examples/window-communication/postMessage/caller.html
+++ b/examples/window-communication/postMessage/caller.html
@@ -21,30 +21,31 @@
 		(function() {
 			const origin = 'https://lucifer63.github.io';
 
+			var child_window,
+				listeners = {
+					calc: {
+						init: function(data) {
+							document.getElementsByClassName('calc-ui')[0].classList.remove('inactive');
+							document.getElementsByClassName('calc-eval').addEventListener('click', function() {
+								child_window.postMessage({
+									caller: 'base',
+									name: 'evaluate'
+								})
+							});
+						}
+					}
+				};
+
 			document.getElementsByClassName('calc-open')[0].addEventListener('click', openCalcWindow);
 
 			function openCalcWindow() {
-				var w = window.open("index.html", "_blank", "height=500,width=450,resizable=yes");
-				w.document.title = "Calculator";
-			}
-
-			var listeners = {
-				calc: {
-					init: function(data) {
-						document.getElementsByClassName('calc-ui')[0].classList.remove('inactive');
-						document.getElementsByClassName('calc-eval').addEventListener('click', data.instance.evaluate);
-					}
-				}
+				var child_window = window.open("index.html", "_blank", "height=500,width=450,resizable=yes");
+				child_window.document.title = "Calculator";
 			}
 
 			window.addEventListener('message', function(custom_event) { 
-					console.log('got!1', custom_event.origin);
 				if (custom_event.origin === origin) {
-					console.log('got!2');
-					return;
-					try {
-						listeners[ custom_event.caller ][ custom_event.event ]( custom_event.data );
-					} catch (e) {}
+					listeners[ custom_event.caller ][ custom_event.name ]( custom_event.data || null );
 				} else { 
 					return;
 				} 
