--- a/examples/window-communication/postMessage/caller.html
+++ b/examples/window-communication/postMessage/caller.html
@@ -44,6 +44,7 @@
 			}
 
 			window.addEventListener('message', function(custom_event) { 
+				console.log(custom_event)
 				if (custom_event.origin === origin) {
 					listeners[ custom_event.caller ][ custom_event.name ]( custom_event.data || null );
 				} else { 
