--- a/examples/window-communication/postMessage/caller.html
+++ b/examples/window-communication/postMessage/caller.html
@@ -46,7 +46,7 @@
 			window.addEventListener('message', function(custom_event) { 
 				console.log(custom_event)
 				if (custom_event.origin === origin) {
-					listeners[ custom_event.caller ][ custom_event.name ]( custom_event.data || null );
+					listeners[ custom_event.data.caller ][ custom_event.data.name ]( custom_event.data.data || null );
 				} else { 
 					return;
 				} 
