--- a/examples/window-communication/postMessage/caller.html
+++ b/examples/window-communication/postMessage/caller.html
@@ -23,16 +23,7 @@
 
 			var child_window,
 				listeners = {
-					calc: {
-						init: function(data) {
-							document.getElementsByClassName('calc-ui')[0].classList.remove('inactive');
-							document.getElementsByClassName('calc-eval')[0].addEventListener('click', function() {
-								child_window.postMessage({
-									caller: 'base',
-									name: 'evaluate'
-								})
-							});
-						}
+					calc: {}
 					}
 				};
 
@@ -41,6 +32,16 @@
 			function openCalcWindow() {
 				var child_window = window.open("index.html", "_blank", "height=500,width=450,resizable=yes");
 				child_window.document.title = "Calculator";
+
+				listeners.calc.init = function(data) {
+					document.getElementsByClassName('calc-ui')[0].classList.remove('inactive');
+					document.getElementsByClassName('calc-eval')[0].addEventListener('click', function() {
+						child_window.postMessage({
+							caller: 'base',
+							name: 'evaluate'
+						})
+					});
+				}
 			}
 
 			window.addEventListener('message', function(custom_event) { 
