--- a/examples/window-communication/postMessage/caller.html
+++ b/examples/window-communication/postMessage/caller.html
@@ -38,7 +38,7 @@
 						child_window.postMessage({
 							caller: 'base',
 							name: 'evaluate'
-						})
+						}, origin)
 					});
 				}
 			}
