--- a/examples/window-communication/simple/caller.html
+++ b/examples/window-communication/simple/caller.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html charset="utf-8">
 <head>
-	<title>Calculator</title>
+	<title>Calc caller</title>
 	<style>
 		.inactive {
 			pointer-events: none;
