Added explanations to .html

--- a/examples/window-communication/simple/caller.html
+++ b/examples/window-communication/simple/caller.html
@@ -10,7 +10,7 @@
 	</style>
 </head>
 <body>
-	<p>This one uses hardcoded function references to communicate between windows: this (parent) window has an <i>initCalc</i> function declared which is evaluated on child window' <i>DOMContentLoaded</i> event. Child window has an <i>evaluateCalc</i> function declared which is evaluated when you click "Evaluate" button. Parent window refer to child window with a arbitrarily chosen identifier, in the example it is <i>child_window</i>; child window refer to parent window with an <i>opener</i> identifier.</p>
+	<p>This one uses hardcoded function references to communicate between windows: this (parent) window has an <i>initCalc</i> function declared which is evaluated on child window' <i>DOMContentLoaded</i> event. Child window has an <i>evaluateCalc</i> function declared which is evaluated when you click "Evaluate" button. Parent window refer to child window with an arbitrarily chosen identifier, in the example it is <i>child_window</i>; child window refer to parent window with an <i>opener</i> identifier.</p>
 
 	<button class="calc-open">Open calculator</button>
 
