--- a/examples/bookmarklet-generator/index.html
+++ b/examples/bookmarklet-generator/index.html
@@ -2,9 +2,9 @@
 <html charset="utf-8">
 <head>
     <title>Bookmarklet generator</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/codemirror.css">
     <link rel="stylesheet" href="css/docs.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -50,6 +50,7 @@ with (window) {
             <p>Keep in mind that generated bookmarklet itself able to alert you about all errors except syntax errors (they will be logged to your browser's console), so check your code twice if you don't wanna have a "dead" bookmarklet :)</p>
         </div>
     </form>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/codemirror.js"></script>
     <script src="js/matchbrackets.js"></script>
     <script src="js/javascript.js"></script>
